# vade-evan-substrate

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
src/: lib.rs  signing.rs  vade_evan_substrate.rs
src/utils/: mod.rs  substrate.rs
src/utils/extrinsic/: events.rs  frame_metadata.rs  node_metadata.rs
src/utils/extrinsic/rpc/: client.rs  mod.rs
typings/: package.json  vade_evan_substsrate.d.ts
