[package]
name = "vade-evan-substrate"
version = "0.1.0"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "substrate based DID and DID document handling plugin for vade"
homepage = "https://github.com/evannetwork/vade-evan-substrate"
documentation = "https://docs.rs/crate/vade-evan-substrate"
repository = "https://github.com/evannetwork/vade-evan-substrate"
readme = "README.md"
keywords = ["did", "ssi"]

[lib]
name = "vade_evan_substrate"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
async-trait = "0.1.31"
blake2-rfc = { version = "0.2.18" }
byteorder = { version = "1.3.4" }
env_logger = "0.7.1"
futures = { version = "0.3.5" }
hex = "0.4.2"
libsecp256k1 = "0.3.5"
log = "0.4.8"
parity_scale_codec = { package ="parity-scale-codec", version = "1.3.0" }
rand = "0.7.3"
regex = { version = "1.3.7" }
reqwest = { version = "0.11.4", default-features= false, features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-runtime-interface = { version = "2.0.0-rc4", default-features = false, features = ["disable_target_static_assertions" ]}
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-storage = { version = "2.0.0-rc4", default-features = false }
thiserror = { version = "1.0" }
twox-hash = { version = "1.5.0" }
vade = { git = "ssh://git@git.slock.it/equs/interop/vade/vade.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }
ws = { version = "0.9.1", features = ["ssl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
js-sys = { version = "0.3" }
serde_derive = "1.0.114"
wasm-bindgen = { version = "0.2",features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.5"
web-sys = { version = "0.3.39", features = [
    'WebSocket',
    'Response',
    'EventTarget',
    'Event',
    'MessageEvent',
	'ErrorEvent',
    'console'
] }

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.12"
